// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`aside.jsx 1`] = `
<DocumentFragment>
  <h4>
    侧边导航布局
  </h4>
  <div
    class="t-layout t-layout-has-sider"
  >
    <aside
      class="t-layout--sider"
      style="width: 232px; max-width: 232px; min-width: 232px; flex: 0 0 232px;"
    >
      <div
        class="t-default-menu"
        style="width: 232px;"
      >
        <div
          class="t-default-menu__inner"
        >
          <div
            class="t-menu__logo"
          >
            <span>
              LOGO
            </span>
          </div>
          <ul
            class="t-menu"
          >
            <li
              class="t-menu__item t-is-active"
            >
              侧边内容一
            </li>
            <li
              class="t-menu__item t-is-active"
            >
              侧边内容二
            </li>
            <li
              class="t-menu__item t-is-active"
            >
              侧边内容三
            </li>
            <li
              class="t-menu__item t-is-active"
            >
              侧边内容四
            </li>
            <li
              class="t-menu__item t-is-active"
            >
              侧边内容无
            </li>
          </ul>
        </div>
        <div
          class="t-menu__options"
        >
          <svg
            class="t-icon t-icon-view-list t-collapsed-icon"
            version="1.1"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M960 704L960 768 64 768 64 704 960 704ZM960 448L960 512 64 512 64 448 960 448ZM960 192L960 256 64 256 64 192 960 192Z"
              fill-opacity=".9"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </aside>
    <div
      class="t-layout"
    >
      <main
        class="t-layout--content"
      >
        <div>
          Content
        </div>
      </main>
      <footer
        class="t-layout--footer"
      >
        Copyright @ 2019-2020 Tencent. All Rights Reserved
      </footer>
    </div>
  </div>
</DocumentFragment>
`;

exports[`base.jsx 1`] = `
<DocumentFragment>
  <h4>
    顶部导航布局
  </h4>
  <div
    class="t-layout"
  >
    <header
      class="t-layout--header"
    >
      Header
    </header>
    <main
      class="t-layout--content"
    >
      <div>
        Content
      </div>
    </main>
    <footer
      class="t-layout--footer"
    >
      Copyright @ 2019-2020 Tencent. All Rights Reserved
    </footer>
  </div>
  <br />
  <h4>
    侧边导航布局
  </h4>
  <div
    class="t-layout t-layout-has-sider"
  >
    <aside
      class="t-layout--sider"
      style="width: 232px; max-width: 232px; min-width: 232px; flex: 0 0 232px;"
    >
      <div
        class="t-default-menu"
        style="width: 232px;"
      >
        <div
          class="t-default-menu__inner"
        >
          <div
            class="t-menu__logo"
          >
            <span>
              LOGO
            </span>
          </div>
          <ul
            class="t-menu"
          >
            <li
              class="t-menu__item t-is-active"
            >
              侧边内容一
            </li>
            <li
              class="t-menu__item t-is-active"
            >
              侧边内容二
            </li>
            <li
              class="t-menu__item t-is-active"
            >
              侧边内容三
            </li>
            <li
              class="t-menu__item t-is-active"
            >
              侧边内容四
            </li>
            <li
              class="t-menu__item t-is-active"
            >
              侧边内容无
            </li>
          </ul>
        </div>
        <div
          class="t-menu__options"
        >
          <svg
            class="t-icon t-icon-view-list t-collapsed-icon"
            version="1.1"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M960 704L960 768 64 768 64 704 960 704ZM960 448L960 512 64 512 64 448 960 448ZM960 192L960 256 64 256 64 192 960 192Z"
              fill-opacity=".9"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </aside>
    <div
      class="t-layout"
    >
      <main
        class="t-layout--content"
      >
        <div>
          Content
        </div>
      </main>
      <footer
        class="t-layout--footer"
      >
        Copyright @ 2019-2020 Tencent. All Rights Reserved
      </footer>
    </div>
  </div>
  <br />
  <h4>
    组合导航布局
  </h4>
  <div
    class="t-layout"
  >
    <header
      class="t-layout--header"
    >
      Header
    </header>
    <div
      class="t-layout t-layout-has-sider"
    >
      <aside
        class="t-layout--sider"
        style="width: 232px; max-width: 232px; min-width: 232px; flex: 0 0 232px;"
      >
        <div
          class="t-default-menu"
          style="width: 232px;"
        >
          <div
            class="t-default-menu__inner"
          >
            <div
              class="t-menu__logo"
            >
              <span>
                LOGO
              </span>
            </div>
            <ul
              class="t-menu"
            >
              <li
                class="t-menu__item t-is-active"
              >
                侧边内容一
              </li>
              <li
                class="t-menu__item t-is-active"
              >
                侧边内容二
              </li>
              <li
                class="t-menu__item t-is-active"
              >
                侧边内容三
              </li>
              <li
                class="t-menu__item t-is-active"
              >
                侧边内容四
              </li>
              <li
                class="t-menu__item t-is-active"
              >
                侧边内容无
              </li>
            </ul>
          </div>
          <div
            class="t-menu__options"
          >
            <svg
              class="t-icon t-icon-view-list t-collapsed-icon"
              version="1.1"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M960 704L960 768 64 768 64 704 960 704ZM960 448L960 512 64 512 64 448 960 448ZM960 192L960 256 64 256 64 192 960 192Z"
                fill-opacity=".9"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </aside>
      <div
        class="t-layout"
      >
        <main
          class="t-layout--content"
        >
          <div>
            Content
          </div>
        </main>
        <footer
          class="t-layout--footer"
        >
          Copyright @ 2019-2020 Tencent. All Rights Reserved
        </footer>
      </div>
    </div>
  </div>
  <br />
  <div
    class="t-layout"
  >
    <header
      class="t-layout--header"
    >
      Header
    </header>
    <div
      class="t-layout t-layout-has-sider"
    >
      <div
        class="t-layout"
      >
        <main
          class="t-layout--content"
        >
          <div>
            Content
          </div>
        </main>
        <footer
          class="t-layout--footer"
        >
          Copyright @ 2019-2020 Tencent. All Rights Reserved
        </footer>
      </div>
      <aside
        class="t-layout--sider"
        style="width: 232px; max-width: 232px; min-width: 232px; flex: 0 0 232px;"
      >
        <div
          class="t-default-menu"
          style="width: 232px;"
        >
          <div
            class="t-default-menu__inner"
          >
            <div
              class="t-menu__logo"
            >
              <span>
                LOGO
              </span>
            </div>
            <ul
              class="t-menu"
            >
              <li
                class="t-menu__item t-is-active"
              >
                侧边内容一
              </li>
              <li
                class="t-menu__item t-is-active"
              >
                侧边内容二
              </li>
              <li
                class="t-menu__item t-is-active"
              >
                侧边内容三
              </li>
              <li
                class="t-menu__item t-is-active"
              >
                侧边内容四
              </li>
              <li
                class="t-menu__item t-is-active"
              >
                侧边内容无
              </li>
            </ul>
          </div>
          <div
            class="t-menu__options"
          >
            <svg
              class="t-icon t-icon-view-list t-collapsed-icon"
              version="1.1"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M960 704L960 768 64 768 64 704 960 704ZM960 448L960 512 64 512 64 448 960 448ZM960 192L960 256 64 256 64 192 960 192Z"
                fill-opacity=".9"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </aside>
    </div>
  </div>
  <br />
  <div
    class="t-layout"
  >
    <header
      class="t-layout--header"
    >
      Header
    </header>
    <div
      class="t-layout t-layout-has-sider"
    >
      <aside
        class="t-layout--sider"
        style="width: 80px; max-width: 80px; min-width: 80px; flex: 0 0 80px;"
      >
        <div
          class="t-default-menu t-is-collapsed"
          style="width: 64px;"
        >
          <div
            class="t-default-menu__inner"
          >
            <div
              class="t-menu__logo"
            >
              <span>
                LOGO
              </span>
            </div>
            <ul
              class="t-menu"
            >
              <li
                class="t-menu__item t-is-active"
              >
                侧边内容一
              </li>
              <li
                class="t-menu__item t-is-active"
              >
                侧边内容二
              </li>
              <li
                class="t-menu__item t-is-active"
              >
                侧边内容三
              </li>
              <li
                class="t-menu__item t-is-active"
              >
                侧边内容四
              </li>
              <li
                class="t-menu__item t-is-active"
              >
                侧边内容无
              </li>
            </ul>
          </div>
          <div
            class="t-menu__options"
          >
            <svg
              class="t-icon t-icon-view-list t-collapsed-icon"
              version="1.1"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M960 704L960 768 64 768 64 704 960 704ZM960 448L960 512 64 512 64 448 960 448ZM960 192L960 256 64 256 64 192 960 192Z"
                fill-opacity=".9"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </aside>
      <div
        class="t-layout"
      >
        <main
          class="t-layout--content"
        >
          <div>
            Content
          </div>
        </main>
        <footer
          class="t-layout--footer"
        >
          Copyright @ 2019-2020 Tencent. All Rights Reserved
        </footer>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`combine.jsx 1`] = `
<DocumentFragment>
  <h4>
    组合导航布局
  </h4>
  <div
    class="t-layout"
  >
    <header
      class="t-layout--header"
    >
      Header
    </header>
    <div
      class="t-layout t-layout-has-sider"
    >
      <aside
        class="t-layout--sider"
        style="width: 232px; max-width: 232px; min-width: 232px; flex: 0 0 232px;"
      >
        <div
          class="t-default-menu"
          style="width: 232px;"
        >
          <div
            class="t-default-menu__inner"
          >
            <div
              class="t-menu__logo"
            >
              <span>
                LOGO
              </span>
            </div>
            <ul
              class="t-menu"
            >
              <li
                class="t-menu__item t-is-active"
              >
                侧边内容一
              </li>
              <li
                class="t-menu__item t-is-active"
              >
                侧边内容二
              </li>
              <li
                class="t-menu__item t-is-active"
              >
                侧边内容三
              </li>
              <li
                class="t-menu__item t-is-active"
              >
                侧边内容四
              </li>
              <li
                class="t-menu__item t-is-active"
              >
                侧边内容无
              </li>
            </ul>
          </div>
          <div
            class="t-menu__options"
          >
            <svg
              class="t-icon t-icon-view-list t-collapsed-icon"
              version="1.1"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M960 704L960 768 64 768 64 704 960 704ZM960 448L960 512 64 512 64 448 960 448ZM960 192L960 256 64 256 64 192 960 192Z"
                fill-opacity=".9"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </aside>
      <div
        class="t-layout"
      >
        <main
          class="t-layout--content"
        >
          <div>
            Content
          </div>
        </main>
        <footer
          class="t-layout--footer"
        >
          Copyright @ 2019-2020 Tencent. All Rights Reserved
        </footer>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`top.jsx 1`] = `
<DocumentFragment>
  <h4>
    顶部导航布局
  </h4>
  <div
    class="t-layout"
  >
    <header
      class="t-layout--header"
    >
      Header
    </header>
    <main
      class="t-layout--content"
    >
      <div>
        Content
      </div>
    </main>
    <footer
      class="t-layout--footer"
    >
      Copyright @ 2019-2020 Tencent. All Rights Reserved
    </footer>
  </div>
</DocumentFragment>
`;
